--- a/builds/vs2017/QSanguosha.vcxproj
+++ b/builds/vs2017/QSanguosha.vcxproj
@@ -3283,7 +3283,7 @@
   <ImportGroup Label="ExtensionTargets" />
   <ProjectExtensions>
     <VisualStudio>
-      <UserProperties UicDir=".\GeneratedFiles" RccDir=".\GeneratedFiles" lupdateOptions="-no-obsolete" lupdateOnBuild="0" Qt5Version_x0020_Win32="Qt5.6.2_msvc2015_32bit" Qt5Version_x0020_x64="$(DefaultQtVersion)" QtVersion_x0020_x64="$(DefaultQtVersion)" QtVersion_x0020_Win32="$(DefaultQtVersion)" />
+      <UserProperties UicDir=".\GeneratedFiles" RccDir=".\GeneratedFiles" lupdateOptions="-no-obsolete" lupdateOnBuild="0" Qt5Version_x0020_Win32="$(DefaultQtVersion)" Qt5Version_x0020_x64="$(DefaultQtVersion)" QtVersion_x0020_x64="$(DefaultQtVersion)" QtVersion_x0020_Win32="$(DefaultQtVersion)" />
     </VisualStudio>
   </ProjectExtensions>
 </Project>
