--- a/resource/android/AndroidManifest.xml
+++ b/resource/android/AndroidManifest.xml
@@ -1,13 +1,7 @@
 <?xml version="1.0"?>
-<manifest package="org.qsgsrara.qsanguosha" xmlns:android="http://schemas.android.com/apk/res/android" android:versionName="2.1.0" android:versionCode="1" android:installLocation="auto">
+<manifest package="org.nijigendevs.saimoe" xmlns:android="http://schemas.android.com/apk/res/android" android:versionName="0.2.8" android:versionCode="1" android:installLocation="auto">
     <application android:hardwareAccelerated="true" android:name="org.qtproject.qt5.android.bindings.QtApplication" android:label="@string/app_name" android:icon="@drawable/icon">
-        <activity
-            android:configChanges="orientation|uiMode|screenLayout|screenSize|smallestScreenSize|locale|fontScale|keyboard|keyboardHidden|navigation"
-            android:name="org.qtproject.qt5.android.bindings.QtActivity"
-            android:label="@string/app_name"
-            android:screenOrientation="landscape"
-            android:launchMode="singleTop"
-            android:theme="@android:style/Theme.NoTitleBar.Fullscreen" >
+        <activity android:configChanges="orientation|uiMode|screenLayout|screenSize|smallestScreenSize|locale|fontScale|keyboard|keyboardHidden|navigation" android:name="org.qtproject.qt5.android.bindings.QtActivity" android:label="@string/app_name" android:screenOrientation="landscape" android:launchMode="singleTop" android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
@@ -37,7 +31,7 @@
             <meta-data android:name="android.app.splash_screen_drawable" android:resource="@drawable/logo"/>
         </activity>
     </application>
-    <uses-sdk android:minSdkVersion="9" android:targetSdkVersion="14"/>
+    <uses-sdk android:minSdkVersion="19" android:targetSdkVersion="23"/>
     <supports-screens android:largeScreens="true" android:normalScreens="true" android:anyDensity="true" android:smallScreens="true"/>
 
     <!-- The following comment will be replaced upon deployment with default permissions based on the dependencies of the application.
