--- a/builds/vs2017/QSanguosha.vcxproj.filters
+++ b/builds/vs2017/QSanguosha.vcxproj.filters
@@ -689,15 +689,6 @@
     <ClCompile Include="..\..\src\server\generalselector.cpp">
       <Filter>server</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\src\dialog\UpdateChecker.cpp">
-      <Filter>dialog</Filter>
-    </ClCompile>
-    <ClCompile Include="Debug\moc_UpdateChecker.cpp">
-      <Filter>Generated Files\Debug</Filter>
-    </ClCompile>
-    <ClCompile Include="Release\moc_UpdateChecker.cpp">
-      <Filter>Generated Files\Release</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\src\core\banpair.cpp">
       <Filter>core</Filter>
     </ClCompile>
@@ -810,12 +801,6 @@
       <Filter>Generated Files\Debug</Filter>
     </ClCompile>
     <ClCompile Include="Release\moc_AvatarModel.cpp">
-      <Filter>Generated Files\Release</Filter>
-    </ClCompile>
-    <ClCompile Include="Debug\moc_UdpDetectorDialog.cpp">
-      <Filter>Generated Files\Debug</Filter>
-    </ClCompile>
-    <ClCompile Include="Release\moc_UdpDetectorDialog.cpp">
       <Filter>Generated Files\Release</Filter>
     </ClCompile>
     <ClCompile Include="..\..\src\dialog\GeneralModel.cpp">
@@ -988,6 +973,12 @@
     </ClCompile>
     <ClCompile Include="..\..\src\package\comic.cpp">
       <Filter>package</Filter>
+    </ClCompile>
+    <ClCompile Include="Debug\moc_udpdetectordialog.cpp">
+      <Filter>Generated Files\Debug</Filter>
+    </ClCompile>
+    <ClCompile Include="Release\moc_udpdetectordialog.cpp">
+      <Filter>Generated Files\Release</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -1198,9 +1189,6 @@
     <CustomBuild Include="..\..\src\server\generalselector.h">
       <Filter>server</Filter>
     </CustomBuild>
-    <CustomBuild Include="..\..\src\dialog\UpdateChecker.h">
-      <Filter>dialog</Filter>
-    </CustomBuild>
     <CustomBuild Include="..\..\src\dialog\cardoverview.ui">
       <Filter>Form Files</Filter>
     </CustomBuild>
@@ -1247,9 +1235,6 @@
       <Filter>dialog</Filter>
     </CustomBuild>
     <CustomBuild Include="..\..\src\dialog\AvatarModel.h">
-      <Filter>dialog</Filter>
-    </CustomBuild>
-    <CustomBuild Include="..\..\src\dialog\UdpDetectorDialog.h">
       <Filter>dialog</Filter>
     </CustomBuild>
     <CustomBuild Include="..\..\src\dialog\GeneralModel.h">
@@ -1308,6 +1293,9 @@
     </CustomBuild>
     <CustomBuild Include="..\..\src\package\animation.h">
       <Filter>package</Filter>
+    </CustomBuild>
+    <CustomBuild Include="..\..\src\dialog\udpdetectordialog.h">
+      <Filter>dialog</Filter>
     </CustomBuild>
   </ItemGroup>
   <ItemGroup>
